@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   ~ /*
   ~ * Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
@@ -19,7 +18,6 @@
   ~ * under the License.
   ~ */
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -40,10 +38,16 @@
             <version>4.2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.integration.framework</artifactId>
+            <version>4.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.synapse</groupId>
             <artifactId>synapse-core</artifactId>
-            <version>2.1.2-wso2v4</version>
-            <!--<version>2.1.1-wso2v7</version>-->
+            <version>2.1.1-wso2v7</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
@@ -57,9 +61,16 @@
         </dependency>
         <!-- test automation dependancies -->
         <dependency>
+            <groupId>org.wso2.esb.integration</groupId>
+            <artifactId>integration-base</artifactId>
+            <version>1.0.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.engine</artifactId>
-            <version>${automation.framework.version}</version>
+            <artifactId>org.wso2.carbon.automation.api</artifactId>
+            <version>${test.framework.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
@@ -69,24 +80,11 @@
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
-            <version>${automation.framework.version}</version>
+            <artifactId>org.wso2.carbon.automation.utils</artifactId>
+            <version>${test.framework.version}</version>
+            <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.extensions</artifactId>
-            <version>${automation.framework.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.extensions</artifactId>
-            <version>${common.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
-            <version>${common.version}</version>
-        </dependency>
+       
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.mediation.library.stub</artifactId>
@@ -159,11 +157,19 @@
             <groupId>groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>1.1-rc-1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jruby</groupId>
             <artifactId>jruby-complete</artifactId>
             <version>1.3.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>emma</groupId>
+            <artifactId>emma</artifactId>
+            <version>${emma.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -175,31 +181,37 @@
             <artifactId>SecVerifier</artifactId>
             <version>${carbon.platform.version}</version>
             <type>aar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-core</artifactId>
             <version>5.2.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-j2ee-management_1.1_spec</artifactId>
             <version>1.0.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jms_1.1_spec</artifactId>
             <version>1.1.1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ca.uhn.hapi.wso2</groupId>
             <artifactId>hapi</artifactId>
             <version>2.1.0.wso2v1</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.esb</groupId>
@@ -252,10 +264,11 @@
             <url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
             <releases>
                 <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
+                <updatePolicy>daily</updatePolicy>
                 <checksumPolicy>ignore</checksumPolicy>
             </releases>
         </repository>
+
 
 
         <repository>
@@ -283,13 +296,12 @@
         </repository>
     </repositories>
 
-
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>2.0</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -332,7 +344,7 @@
                         </goals>
                         <configuration>
                             <finalName>AcquiaContextDb</finalName>
-                            <appendAssemblyId>true</appendAssemblyId>
+                            <appendAssemblyId>false</appendAssemblyId>
                             <filters>
                                 <filter>${basedir}/src/main/assembly/filter.properties</filter>
                             </filters>
@@ -348,10 +360,6 @@
                 <version>2.12.4</version>
                 <inherited>false</inherited>
                 <configuration>
-                    <!--     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m
-                             -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE
-                             -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006
-                         </argLine>-->
                     <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <disableXmlReport>false</disableXmlReport>
@@ -409,8 +417,7 @@
                         <configuration>
                             <outputDirectory>${project.build.directory}/emma</outputDirectory>
                             <includeTypes>jar</includeTypes>
-                            <includeArtifactIds>emma,org.wso2.carbon.automation.core
-                            </includeArtifactIds>
+                            <includeArtifactIds>emma,org.wso2.carbon.automation.core</includeArtifactIds>
                         </configuration>
                     </execution>
                     <execution>
@@ -420,8 +427,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/src/test/resources/artifacts/ESB/jar
-                            </outputDirectory>
+                            <outputDirectory>${basedir}/src/test/resources/artifacts/ESB/jar</outputDirectory>
                             <includeTypes>jar</includeTypes>
                             <includeArtifactIds>
                                 groovy-all,jruby-complete,mysql-connector-java,activemq-core,geronimo-j2ee-management_1.1_spec,geronimo-jms_1.1_spec
@@ -446,20 +452,20 @@
                         <id>unpack-mar-jks</id>
                         <phase>compile</phase>
                         <goals>
-                            <goal>copy-dependencies</goal>
+                            <goal>unpack</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
-                            <!--<resources>-->
-                            <!--<resource>-->
-                            <!--<directory>-->
-                            <!--${basedir}/target/tobeCopied/wso2esb-${project.version}/repository/samples/resources/security/-->
-                            <!--</directory>-->
-                            <!--<includes>-->
-                            <!--<include>**/*.jks,**/*.mar,**/synapse_sample*.xml</include>-->
-                            <!--</includes>-->
-                            <!--</resource>-->
-                            <!--</resources>-->
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.wso2.esb</groupId>
+                                    <artifactId>wso2esb</artifactId>
+                                    <version>${esb.version}</version>
+                                    <type>zip</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
+                                    <includes>**/*.jks,**/*.mar,**/synapse_sample*.xml</includes>
+                                </artifactItem>
+                            </artifactItems>
                         </configuration>
                     </execution>
 
@@ -609,7 +615,7 @@
         <proxyadmin.stub.version>4.2.1</proxyadmin.stub.version>
         <test.framework.version>${carbon.platform.version}</test.framework.version>
         <carbon.platform.version>4.2.0</carbon.platform.version>
-        <!--<esb.version>4.9.0-SNAPSHOT</esb.version>-->
+        <emma.version>2.1.5320</emma.version>
         <esb.version>4.8.1</esb.version>
     </properties>
 </project>
